# 100-days-of-python

./: .gitignore  pyproject.toml
day01/: README.md  band-name-generator-v2.py  band-name-generator.py
day02/: README.md  tip-calculator.py
day03/: README.md  love-calculator.py  treasure-island.py
day04/: README.md  rock-paper-scissors.py  treasure-map.py
day05/: README.md  add-even-numbers.py  average-height.py  fizzbuzz.py  high-score.py  password-generator.py
day06/: README.md
day07/: README.md  hangman.py  hangman_words.py
day08/: README.md  caesar-cipher.py  paint-area-calculator.py  prime-numbers.py
day09/: README.md  blind-auction.py  dictionary-in-list.py  grading-program.py
day10/: README.md  calculator.py  calculator_answer.py  days-in-month.py
day11/: main.py
day12/: art.py  guess-the-number-refined.py  guess-the-number.py
day14/: higher-lower-game.py
day15/: coffee-machine.py
day16/: coffee-machine-OOP.py
day17/: quiz-game.py  quiz_brain.py
day18/: hirst-painting-with-turtle.py  painting-with-turtle.py
day19/: etch-a-sketch-game.py  turtle-race-game.py
day20/: snake-game.py  snake.py
day21/: food.py  scoreboard.py  snake-game.py  snake.py
day22/: ball.py  pong-game.py
day23/: car_manager.py  main.py  player.py  scoreboard.py
day24/: main.py
day25/: main.py
day26/: main.py
day27/: mile-to-km-converter.py
