[tool.poetry]
name = "100-days-of-python"
version = "0.1.0"
description = ""
authors = ["jman <new1726@naver.com>"]
readme = "README.md"
packages = [{include = "100_days_of_python"}]

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
